@startuml

title __REPOSITORY's Class Diagram__\n

  namespace com.cleanup.todoc {
    namespace model.repository {
      class com.cleanup.todoc.model.repository.ProjectRepository {
          - allProjects : LiveData<List<Project>>
          - doInBackground : Executor
          + ProjectRepository()
          + ProjectRepository()
          + delete()
          + getAllProjectsLiveData()
          + insert()
          + setDoInBackground()
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace model.repository {
      class com.cleanup.todoc.model.repository.TaskRepository {
          + allTasks : LiveData<List<RelationTaskWithProject>>
          + allTasksLivedataAZ : LiveData<List<RelationTaskWithProject>>
          + allTasksLivedataOld : LiveData<List<RelationTaskWithProject>>
          + allTasksLivedataRecent : LiveData<List<RelationTaskWithProject>>
          + allTasksLivedataZA : LiveData<List<RelationTaskWithProject>>
          - allProjects : LiveData<List<Project>>
          - doInBackground : Executor
          + TaskRepository()
          + TaskRepository()
          + delete()
          + deleteTaskById()
          + getAllRelationTaskWithProjectLiveData()
          + getAllTasksLivedataAZ()
          + getAllTasksLivedataOld()
          + getAllTasksLivedataRecent()
          + getAllTasksLivedataZA()
          + insert()
          + setDoInBackground()
          + update()
      }
    }
  }
  

  com.cleanup.todoc.model.repository.ProjectRepository o-- com.cleanup.todoc.model.dao.ProjectDao : mProjectDao
  com.cleanup.todoc.model.repository.TaskRepository o-- com.cleanup.todoc.model.dao.ProjectDao : mProjectDao
  com.cleanup.todoc.model.repository.TaskRepository o-- com.cleanup.todoc.model.dao.TaskDao : mTaskDao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
